2014-11-13 tag rel_3_1_3
- corretto caricafile.xsl (erano rimasti dei doppi apici dannosi)

2014-06-25 tag rel_3_1_2
- corretta gestione decimali valuta

2014-05-16 tag rel_3_1_0
- cdnizzazione: rimossa (fin dove possibile) la presenza di librerie terze parti,
	sia php che js:
	- php: 
		- phpmailer e fpdf devono trovarsi dentro direcory così chiamate in include_path
		- analogo al punto precedente per PHPExcel e ExcelWriterXML
		- analogo ai punti precedenti per i moduli PEAR (Spreadsheet)
	- js: tutto cio' che è terze parti è in CDN, ad eccezione della gestione
			del calendario delle date e di ddmx: è roba troppo vecchia che andrà
			presto sostituita

2014-02-23 tag rel_3_0_28
- corretto possibilità di special chars in menu e titolo tabella

2014-02-23 tag rel_3_0_27
- aggiunto gestione tipo "newdate"....

2014-02-20 tag rel_3_0_26
- hanno corretto un baco in mysql (utf -> len x 3) per cui ho tolto il workaround relativo in wadocumentazione

2014-02-19 tag rel_3_0_25
- aggiunta possibilita, in fase di edit, aggiungere la riga in fondo oltreche all'inizio della tabella

2014-02-10 tag rel_3_0_24
corretti 2 errori (2!) che impedivano alla tabella di avere la riga dei totali partendo da vuota

2014-02-10 tag rel_3_0_23
- piccola correzione su bottone

2014-01-19 tag rel_3_0_22
- aggiunti (o modificati) metodi magic su warecord e wamodulo
- corretto errori su multiselezione_checkbox
- waselezione: ordinamento lista di default su riempimento rpc (per valore e non per chiave)
- wavaluta: corretto punto che non diventava virgola (in tempo)
- watabella: portato a fattor comune un po' di template xsl
- watabella: corretto errore per cui resettava parametri qs su ricerca rapida
- watabella: cambiato comportamento di pagina precedente/successiva (ma mantiene compatibilità)

2014-01-10 tag rel_3_0_21
- corretto errore su formattazione wavaluta
- aggiunte proprietà automagic a waRecord

2014-01-01 tag rel_3_0_20